--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "antd": "^3.19.5",
+    "antd": "^3.21.4",
+    "braft-editor": "^2.3.7",
+    "braft-extensions": "^0.0.18",
     "classnames": "^2.2.6",
-    "dva": "^2.6.0-beta.6",
+    "dva": "^2.6.0-beta.12",
     "dva-logger": "^1.0.0",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-media": "^1.9.2",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -30,9 +33,11 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "mockjs": "^1.0.1-beta3",
     "react-test-renderer": "^16.7.0",
-    "umi": "^2.7.7",
-    "umi-plugin-react": "^1.8.4"
+    "roadhog-api-doc": "^1.1.2",
+    "umi": "^2.8.18",
+    "umi-plugin-react": "^1.9.16"
   },
   "lint-staged": {
     "*.{js,jsx}": [
