--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "codemirror": "^5.48.2",
     "dva": "^2.6.0-beta.12",
     "dva-logger": "^1.0.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-codemirror2": "^6.0.0",
     "react-container-query": "^0.11.0",
