--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "codemirror": "^5.48.2",
     "dva": "^2.6.0-beta.12",
     "dva-logger": "^1.0.0",
+    "for-editor": "^0.3.2",
+    "highlight.js": "^9.15.10",
+    "marked": "^0.7.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
     "react": "^16.8.6",
