--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dva-logger": "^1.0.0",
     "for-editor": "^0.3.2",
     "highlight.js": "^9.15.10",
+    "lodash-decorators": "^6.0.1",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
