--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
