--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@antv/data-set": "^0.10.2",
+    "@types/lodash.debounce": "^4.0.6",
     "@uiw/react-codemirror": "^1.0.27",
     "antd": "^3.21.4",
+    "bizcharts": "^3.5.5",
+    "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "braft-editor": "^2.3.7",
     "braft-extensions": "^0.0.18",
     "classnames": "^2.2.6",
@@ -20,15 +24,19 @@
     "for-editor": "^0.3.2",
     "highlight.js": "^9.15.10",
     "lodash-decorators": "^6.0.1",
+    "lodash.debounce": "^4.0.8",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "path-to-regexp": "^3.0.0",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
+    "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "styled-components": "^4.3.2",
     "umi-request": "^1.2.2"
