--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dva-logger": "^1.0.0",
     "for-editor": "^0.3.2",
     "highlight.js": "^9.15.10",
+    "html-tags": "^3.1.0",
     "lodash-decorators": "^6.0.1",
     "lodash.debounce": "^4.0.8",
     "marked": "^0.7.0",
@@ -39,6 +40,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "styled-components": "^4.3.2",
+    "turndown": "^5.0.3",
     "umi-request": "^1.2.2",
     "uuid": "^3.3.3"
   },
