--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@uiw/react-codemirror": "^1.0.27",
     "antd": "^3.21.4",
+    "axios": "^0.19.2",
     "bizcharts": "^3.5.5",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "braft-editor": "^2.3.7",
@@ -21,6 +22,7 @@
     "codemirror": "^5.48.2",
     "dva": "^2.6.0-beta.12",
     "dva-logger": "^1.0.0",
+    "emotion": "^10.0.27",
     "for-editor": "^0.3.2",
     "highlight.js": "^9.15.10",
     "lodash": "^4.17.15",
@@ -30,7 +32,7 @@
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "path-to-regexp": "^3.0.0",
-    "ramda": "^0.26.1",
+    "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
