--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
   "singleQuote": true,
+  "useTabs": false,
   "trailingComma": "all",
   "printWidth": 100,
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": { "parser": "json" }
+  "overrides": [{
+    "files": ".prettierrc",
+    "options": {
+      "parser": "json"
     }
-  ]
+  }]
 }
