--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-fittext": "^1.0.0",
+    "react-highlight-words": "^0.16.0",
     "react-media": "^1.9.2",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
