--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dva-logger": "^1.0.0",
     "emotion": "^10.0.27",
     "highlight.js": "^9.15.10",
+    "immutability-helper": "^3.0.1",
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
     "lodash.debounce": "^4.0.8",
@@ -34,6 +35,8 @@
     "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-fittext": "^1.0.0",
