--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src mock tests",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "docsify": "docsify serve ./documents --port 8081"
   },
   "dependencies": {
     "@antv/data-set": "^0.10.2",
+    "@emotion/core": "^10.0.28",
     "@types/lodash.debounce": "^4.0.6",
     "@uiw/react-codemirror": "^1.0.27",
     "antd": "^3.21.4",
@@ -20,11 +22,14 @@
     "braft-extensions": "^0.0.18",
     "classnames": "^2.2.6",
     "codemirror": "^5.48.2",
+    "copy-to-clipboard": "^3.2.1",
+    "detect-indent": "^6.0.0",
     "dva": "^2.6.0-beta.12",
     "dva-logger": "^1.0.0",
     "emotion": "^10.0.27",
     "highlight.js": "^9.15.10",
     "immutability-helper": "^3.0.1",
+    "is-hotkey": "^0.1.6",
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
     "lodash.debounce": "^4.0.8",
@@ -32,6 +37,7 @@
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "path-to-regexp": "^3.0.0",
+    "prismjs": "^1.19.0",
     "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
@@ -43,6 +49,8 @@
     "react-media": "^1.9.2",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
+    "slate": "^0.57.1",
+    "slate-react": "^0.57.1",
     "styled-components": "^4.3.2",
     "umi-request": "^1.2.2",
     "uuid": "^3.3.3"
